// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatContainer component initializedState when burned renders properly 1`] = `
<div
  className="ChatContainer burned"
  style={
    Object {
      "maxHeight": 600,
      "width": 400,
    }
  }
>
  <Connect(HeaderMenu) />
  <div
    className="errorBanner"
    style={
      Object {
        "background": "#fff",
        "color": "red",
        "fontFamily": "Source Sans Pro",
        "fontWeight": 700,
        "textTransform": "uppercase",
      }
    }
  >
    We're having trouble connecting. Try refreshing the page.
  </div>
  <Debugger />
  <div
    className="chatContainerBody"
  >
    <Connect(Transcript) />
  </div>
</div>
`;

exports[`ChatContainer component initializedState when disconnected renders properly 1`] = `
<div
  className="ChatContainer disconnected"
  style={
    Object {
      "maxHeight": 600,
      "width": 400,
    }
  }
>
  <Connect(HeaderMenu) />
  <div
    className="errorBanner"
    style={
      Object {
        "background": "#fff",
        "color": "red",
        "fontFamily": "Source Sans Pro",
        "fontWeight": 700,
        "textTransform": "uppercase",
      }
    }
  >
    Reconnecting...
  </div>
  <Debugger />
  <div
    className="chatContainerBody"
  >
    <Connect(Transcript) />
  </div>
</div>
`;

exports[`ChatContainer component initializedState when errored renders properly 1`] = `
<div
  className="ChatContainer error"
  style={
    Object {
      "maxHeight": 600,
      "width": 400,
    }
  }
>
  <Connect(HeaderMenu) />
  <div
    className="errorBanner"
    style={
      Object {
        "background": "#fff",
        "color": "red",
        "fontFamily": "Source Sans Pro",
        "fontWeight": 700,
        "textTransform": "uppercase",
      }
    }
  >
    We're having trouble connecting. Try refreshing the page.
  </div>
  <Debugger />
  <div
    className="chatContainerBody"
  >
    <Connect(Transcript) />
  </div>
</div>
`;

exports[`ChatContainer component initializedState when inactive renders properly 1`] = `
<div
  className="ChatContainer inactive"
  style={
    Object {
      "maxHeight": 600,
      "width": 400,
    }
  }
>
  <Connect(HeaderMenu) />
  <div
    className="errorBanner"
    style={
      Object {
        "background": "#fff",
        "color": "red",
        "fontFamily": "Source Sans Pro",
        "fontWeight": 700,
        "textTransform": "uppercase",
      }
    }
  >
    You have been disconnected due to inactivity. Please refresh the page to reconnect.
  </div>
  <Debugger />
  <div
    className="chatContainerBody"
  >
    <Connect(Transcript) />
  </div>
</div>
`;

exports[`ChatContainer component initializedState when initialized renders properly 1`] = `
<div
  className="ChatContainer initialized"
  style={
    Object {
      "maxHeight": 600,
      "width": 400,
    }
  }
>
  <Connect(HeaderMenu) />
  <div
    className="banner"
    style={
      Object {
        "background": "#31bf8b",
        "backgroundColor": "#333",
        "fontFamily": "Source Sans Pro",
        "fontSize": 16,
        "fontWeight": 500,
        "textTransform": "uppercase",
      }
    }
  >
    We're here to help if you have any questions!
  </div>
  <Debugger />
  <div
    className="chatContainerBody"
  >
    <Connect(Transcript) />
    <Connect(MessageForm) />
  </div>
</div>
`;

exports[`ChatContainer component initializedState when loading renders properly 1`] = `
<div
  className="ChatContainer loading"
  style={
    Object {
      "maxHeight": 600,
      "width": 400,
    }
  }
>
  <Connect(HeaderMenu) />
  <div
    className="banner"
    style={
      Object {
        "background": "#31bf8b",
        "backgroundColor": "#333",
        "fontFamily": "Source Sans Pro",
        "fontSize": 16,
        "fontWeight": 500,
        "textTransform": "uppercase",
      }
    }
  >
    We're here to help if you have any questions!
  </div>
  <Debugger />
  <div
    className="chatContainerBody"
  >
    <Spinner />
  </div>
</div>
`;

exports[`ChatContainer component initializedState when uninitialized renders properly 1`] = `
<div
  className="ChatContainer uninitialized"
  style={
    Object {
      "maxHeight": 600,
      "width": 400,
    }
  }
>
  <Connect(HeaderMenu) />
  <div
    className="banner"
    style={
      Object {
        "background": "#31bf8b",
        "backgroundColor": "#333",
        "fontFamily": "Source Sans Pro",
        "fontSize": 16,
        "fontWeight": 500,
        "textTransform": "uppercase",
      }
    }
  >
    We're here to help if you have any questions!
  </div>
  <Debugger />
  <div
    className="chatContainerBody"
  >
    <Spinner />
  </div>
</div>
`;

exports[`ChatContainer component when chatContainerHidden is true returns null 1`] = `null`;
